1. 📷 Boos can send picture resume directly! 2. 🛠 Optimize salary filtering logic, incongruent information will not be clicked 3. ⏰ No operation for 10 minutes will automatically exit the program